[package]
name = "gasket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
crossbeam = "0.8.1"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1.37"
