[package]
name = "gasket-derive"
version = "0.5.0"
edition = "2021"
description = "Staged Event-Driven Architecture (SEDA) framework"
repository = "https://github.com/construkts/gasket-rs"
homepage = "https://github.com/construkts/gasket-rs"
documentation = "https://docs.rs/gasket"
license = "Apache-2.0"
readme = "../README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "^1"
syn = "^2"

[dev-dependencies]
gasket = { version = "^0.5", path = "../gasket" }
