[package]
name = "gasket"
version = "0.8.0"
edition = "2021"
description = "Staged Event-Driven Architecture (SEDA) framework"
repository = "https://github.com/construkts/gasket-rs"
homepage = "https://github.com/construkts/gasket-rs"
documentation = "https://docs.rs/gasket"
license = "Apache-2.0"
readme = "../README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]


[dependencies]
async-trait = "0.1.68"
crossbeam = "0.8.1"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1.37"
gasket-derive = { version = "0.8.0", path = "../gasket-derive", optional = true }
signal-hook = "0.3.17"

[dev-dependencies]
tracing-subscriber = "0.3.16"

[features]
derive = ["gasket-derive"]
